# docs/swagger.json
@@ -230,7 +230,9 @@
                         "name": "strategy",
                         "in": "body",
                         "required": true,
-                        "schema": {}
+                        "schema": {
+                            "$ref": "#/definitions/models.StrategyPayload"
+                        }
                     }
                 ],
                 "responses": {
